<resources>
    <string name="app_name">Not Forgot!</string>

    <string name="header_login">Вход</string>
    <string name="header_registration">Регистрация</string>
    <string name="header_add_task">Добавить заметку</string>
    <string name="header_edit_task">Редактировать заметку</string>
    <string name="header_add_category">Добавить категорию</string>

    <string name="hint_name">Имя</string>
    <string name="hint_mail">Почта</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_re_password">Повторите пароль</string>
    <string name="hint_task_name">Название</string>
    <string name="hint_description">Описание</string>
    <string name="hint_category">Категория</string>
    <string name="hint_priority">Приоритет</string>
    <string name="hint_end_date">Сделать до</string>

    <string name="action_register">Зарегистрироваться</string>
    <string name="action_login">Войти</string>
    <string name="action_edit">Редактировать</string>
    <string name="action_save">Сохранить</string>
    <string name="action_cancel">Отмена</string>
    <string name="action_yes">Да!</string>
    <string name="action_save_question">Имеются несохраненные данные. Сохранить?</string>
    <string name="action_logout">Выход</string>
    <string name="action_connection">Соединение</string>

    <string name="text_until">До %s</string>
    <string name="text_done">Сделано</string>
    <string name="text_not_done">Не сделано</string>
    <string name="text_unspecified">Не указано</string>

    <string name="text_loading">Идёт загрузка данных</string>
    <string name="text_loaded">Загрузка завершена</string>
    <string name="text_error">Произошла ошибка загрузки</string>

    <string name="text_task_saved_successfully">Дело успешно сохранено.</string>
    <string name="text_category_saved_successfully">Категория успешно добавлена.</string>
    <string name="text_api_saving_error">Данные сохранены локально.</string>
    <string name="text_task_deleted">Задача удалена.</string>
    <string name="text_task_deleted_locally">Задача удалена локально.</string>
    <string name="text_no_tasks">У вас пока нет дел.\nСчастливый вы человек!</string>
    <string name="text_tasks_syncing">Идет синхрониизация данных с сервером. Пожалуйста, подождите!</string>

    <string name="error_blank_task_title">Название должно быть указано</string>
    <string name="error_blank_task_description">Описание должно быть указано</string>
    <string name="error_blank_mail">Почта должна быть указана в корректном формате</string>
    <string name="error_blank_password">Пароль должен быть указан</string>
    <string name="error_blank_name">Имя должно быть указано</string>
    <string name="error_different_passwords">Пароли должны совпадать</string>
    <string name="error_connection_failed">Не удалось выполнить запрос. Проверьте ваше интернет-соединение</string>

    <string name="code_200">Все хорошо</string>
    <string name="code_400">Неверный запрос</string>
    <string name="code_401">Пользователь не авторизации</string>
    <string name="code_404">Страница не найдена</string>
    <string name="code_500">Ошибка на стороне сервера</string>
    <string name="code_exception">Не удалось установить подключение.</string>

    <string name="title_activity_main">MainActivity</string>
</resources>
