<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<data>
    <variable
        name="user"
        type="dev.ghost.notforgotapp.entities.User" />
</data>

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_cornered_container"
        android:orientation="vertical"
        android:padding="@dimen/margin_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        tools:showIn="@layout/activity_login">

        <TextView
            android:id="@+id/textView2"
            style="@style/HeaderTextView"
            android:text="@string/header_registration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextRegistrationName"
            style="@style/InputEditText"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:text="@={user.name}"
            />
        <EditText
            android:id="@+id/editTextRegistrationMail"
            style="@style/InputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_mail"
            android:inputType="textEmailAddress"
            android:text="@={user.mail}"
            />

        <EditText
            android:id="@+id/editTextRegistrationPassword"
            style="@style/InputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:text="@={user.password}"
            />

        <EditText
            android:id="@+id/editTextRegistrationRePassword"
            style="@style/InputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_re_password"
            android:inputType="textPassword"
            android:text="@={user.repassword}"
            />

        <Button
            android:id="@+id/buttonRegistrationAction"
            style="@style/BrightButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_registration" />

        <Button
            android:id="@+id/buttonRegistrationLogin"
            style="@style/GrayButton"
            android:text="@string/header_login" />
    </LinearLayout>
</layout>