<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="dev.ghost.notforgotapp.entities.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/BackgroundConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".registration.RegistrationActivity">

        <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_cornered_container"
            android:orientation="vertical"
            android:padding="@dimen/margin_normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.498"
            tools:showIn="@layout/activity_login">

            <TextView
                android:id="@+id/textView2"
                style="@style/HeaderTextView"
                android:text="@string/header_registration"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutRegistrationName"
                android:background="@drawable/background_edit_text"
                app:hintTextColor="@color/colorVeryDarkGray"
                app:errorEnabled="true"
                android:paddingTop="@dimen/margin_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                >

                <EditText
                    android:id="@+id/editTextRegistrationName"
                    style="@style/InputEditText"
                    android:hint="@string/hint_name"
                    android:inputType="textPersonName"
                    android:text="@={user.name}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutRegistrationMail"
                android:background="@drawable/background_edit_text"
                app:hintTextColor="@color/colorVeryDarkGray"
                app:errorEnabled="true"
                android:paddingTop="@dimen/margin_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal">

                <EditText
                    android:id="@+id/editTextRegistrationMail"
                    style="@style/InputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_mail"
                    android:inputType="textEmailAddress"
                    android:text="@={user.mail}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutRegistrationPassword"
                android:background="@drawable/background_edit_text"
                app:hintTextColor="@color/colorVeryDarkGray"
                app:errorEnabled="true"
                android:paddingTop="@dimen/margin_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal">

                <EditText
                    android:id="@+id/editTextRegistrationPassword"
                    style="@style/InputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:text="@={user.password}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutRegistrationRePassword"
                android:background="@drawable/background_edit_text"
                app:hintTextColor="@color/colorVeryDarkGray"
                app:errorEnabled="true"
                android:paddingTop="@dimen/margin_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal">

                <EditText
                    android:id="@+id/editTextRegistrationRePassword"
                    style="@style/InputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_re_password"
                    android:inputType="textPassword"
                    android:text="@={user.repassword}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonRegistrationAction"
                style="@style/BrightButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="registrationAction"
                android:text="@string/header_registration" />

            <Button
                android:id="@+id/buttonRegistrationLogin"
                style="@style/GrayButton"
                android:onClick="goBack"
                android:text="@string/header_login" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>